telecom-bretagne/javacompiler/SecondPhase/tests/Good/TestWhile.java
package tests;

class A {

	
	A(String l[]) {
		while(true){
			int a = 1;
		}
	}
	

}

