telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestDuplicatedAttributesFail.java
class A {}
class B {
	int x;
	String x;
}
